@@ -151,7 +151,11 @@ None
 
 12. Sky module
 --------------
-None
+The GSkyMap load() and save() methods now support the handling of FITS
+extension names. Users can now specify with which extension name a sky
+map is written to a FITS file, and from which extension name it should
+be loaded. This allows to have multiple sky maps in the same file, and
+to mix also HEALPix and WCS maps in the same file (#1695).
 
 
 13. Support module
